--- a/study-spring-bean-wiring-auto/pom.xml
+++ b/study-spring-bean-wiring-auto/pom.xml
@@ -14,4 +14,8 @@
     <name>study-spring-bean-wiring-auto</name>
     <url>http://www.example.com</url>
 
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
+
 </project>
