添加模块：study-spring-bean-wiring-profile

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>study-spring-bean-lifecycle</module>
         <module>study-spring-bean-wiring-auto</module>
+        <module>study-spring-bean-wiring-profile</module>
     </modules>
 
     <properties>
