--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,10 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>study-spring-bean-lifecycle</module>
-        <module>study-spring-bean-wiring-auto</module>
-        <module>study-spring-bean-wiring-profile</module>
+        <module>bean-scope</module>
+        <module>bean-lifecycle</module>
+        <module>bean-wiring-auto</module>
+        <module>bean-wiring-profile</module>
     </modules>
 
     <properties>
