--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>bean-scope-singleton</module>
         <module>bean-scope-prototype</module>
         <module>mvc-annotation</module>
+        <module>mvc-xml</module>
     </modules>
 
     <properties>
