--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
         <module>data-orm-jpa-hibernate</module>
         <module>mvc-exception</module>
         <module>spring-mvc-mybatis</module>
+        <module>security-web</module>
+        <module>security-web-method</module>
     </modules>
 
     <properties>
@@ -43,12 +45,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>5.0.7.RELEASE</version>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
