--- a/bean-wiring-auto/pom.xml
+++ b/bean-wiring-auto/pom.xml
@@ -12,4 +12,12 @@
     <artifactId>bean-wiring-auto</artifactId>
 
     <name>bean-wiring-auto</name>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.0.6.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
