--- a/data-orm-hibernate/pom.xml
+++ b/data-orm-hibernate/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.2.17.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.0.6.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
