--- a/data-orm-jpa-hibernate/pom.xml
+++ b/data-orm-jpa-hibernate/pom.xml
@@ -16,6 +16,11 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.0.7.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
             <version>5.0.7.RELEASE</version>
         </dependency>
