--- a/data-cache/pom.xml
+++ b/data-cache/pom.xml
@@ -14,6 +14,15 @@
 
     <name>data-cache Maven Webapp</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.197</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <build>
         <finalName>data-cache</finalName>
 
