--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>spring-mvc-mybatis</module>
         <module>security-web</module>
         <module>security-web-method</module>
+        <module>security-hello</module>
     </modules>
 
     <properties>
