--- a/security-hello/pom.xml
+++ b/security-hello/pom.xml
@@ -52,6 +52,12 @@
             <version>2.52.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
 
 
     </dependencies>
