添加:di-introduce

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>security-hello</module>
         <module>data-transaction</module>
         <module>di-introduce</module>
+        <module>aop-introduce</module>
     </modules>
 
     <properties>
