--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>com.hantangtouzi</groupId>
     <artifactId>study-spring</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <modules>
         <module>bean-lifecycle</module>
         <module>bean-wiring-auto</module>
