--- a/mvc-annotation/pom.xml
+++ b/mvc-annotation/pom.xml
@@ -28,9 +28,34 @@
         </dependency>
 
         <dependency>
+
+            <groupId>javax.servlet.jsp</groupId>
+
+            <artifactId>jsp-api</artifactId>
+
+            <version>2.1</version>
+
+            <scope>provided</scope>
+
+        </dependency>
+
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.1.6.RELEASE</version>
         </dependency>
 
     </dependencies>
